--- a/411/411.vcxproj.filters
+++ b/411/411.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Application.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="SecondClass.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseClass.cpp">
